--- a/SList/SList/SList.vcxproj.filters
+++ b/SList/SList/SList.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="slist.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_list.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
