--- a/Tree/Tree/Tree.vcxproj.filters
+++ b/Tree/Tree/Tree.vcxproj.filters
@@ -18,15 +18,12 @@
     <ClInclude Include="tree.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="queue.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="queue.cpp">
+    <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
